fix gaps between multiple now events on small screen

--- a/assets/sass/_conditional_small.scss
+++ b/assets/sass/_conditional_small.scss
@@ -401,6 +401,12 @@
     .dc-cv--title__includesyear + .dc-cv--entry{   
       margin-top: 1em;
     }
+
+    .dc-cv--now + .dc-cv--title__includesyear,
+    .dc-cv--now + .dc-cv--title__includesyear + .dc-cv--entry{
+      margin-top: 0;
+    }
+
     .dc-track-record .dc-cv--title__includesyear + .dc-cv--entry[data-dc-cv-priority="1"] + .dc-cv--entry[data-dc-cv-priority="0"]{
       margin-top: 1em;
     }
